added basic frontend for scheduler
